# python-uppgift01

./: .gitignore  README.md  fundamentals.ipynb  fundamentals.py  main.ipynb  main.py  mnist.ipynb  mnist.py  mnist_cnn.pt  pyproject.toml  test_mnist.py
