[project]
name = "python-uppgift01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-collaboration>=4.1.1",
    "jupyterlab>=4.4.10",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.jupytext]
formats = "ipynb,py:percent"
